playing with bootstrap and the about page

--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -2,6 +2,6 @@ $body-bg:	#34495e;
 $brand-primary:	#2980b9;
 $navbar-inverse-bg:	#2c3e50;
 $navbar-inverse-link-color:	#ffffff;
-$jumbotron-bg:	#e67e22;
+$jumbotron-bg:	#ddd;
 
 @import 'bootstrap';
