--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,32 @@
-<h1>About us</h1>
-<p>We are working on our one month rails pinteresting app!</p>
+<div class="jumbotron">
+	<h1>who <small>one man and his laptop</small></h1>
+	<blockquote>
+		<p>Hi my name is Jamie. I'm learning from One Month Rails to create Ruby apps!</p>
+		<footer>watch out for <cite title="Source Title">Jamie</cite></footer>
+	</blockquote>
+	<h2>From this project I want to:</h2>
+	<ul class="list-group">
+		<li class="list-group-item">
+			<p><span class="glyphicon glyphicon-ok-circle"></span> Build many simple and helpful applications</p>
+			</li>
+		<li class="list-group-item">
+			<p><span class="glyphicon glyphicon-ok-circle"></span> Contribute to the development community</p>
+		</li>
+		<li class="list-group-item">
+			<p><span class="glyphicon glyphicon-ok-circle"></span> Build a SaaS start up</p>
+		</li>
+		<li class="list-group-item">
+			<p><span class="glyphicon glyphicon-ok-circle"></span> Get greater freelance job opportunities</p>
+		</li>
+		<li class="list-group-item">
+			<span class="badge">100%</span>
+			<p><span class="glyphicon glyphicon-ok-circle"></span> 
+			MOST IMPORTANTLY - have some fun with code</p>
+		</li>
+	</ul>
+	<div class="alert alert-warning" role="alert">
+		<p><span class="glyphicon glyphicon-flash"></span> success will come so hold on tight</p>
+	</div>
+	<h3>What is this project?</h3>
+	<p>We are learning how to use Rails and Bootstrap to create a Pinterest like app. From learning this it opens up the flood gates of creativity with Rails to then go on to make anything you can imagine!</p>
+</div>
