--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -1,7 +1,18 @@
-$body-bg:	#34495e;
-$brand-primary:	#2980b9;
-$navbar-inverse-bg:	#2c3e50;
-$navbar-inverse-link-color:	#ffffff;
-$jumbotron-bg:	#ddd;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:	#ecf0f1;
+$font-family-sans-serif:	'Lato', 'Helvetica Neue', Helvetica, Arial, snas-serif;
+$navbar-height:	45px;
+$navbar-default-bg:	white;
+$navbar-default-brand-color:	#c0392b;
+$brand-primary:	#c0392b;
+$jumbotron-bg:	white;
 
 @import 'bootstrap';
+
+.center {
+	text-align:center;
+}
+.navbar-brand {
+	font-weight:bold;
+}
